# mpos2

./: .gitignore  .htaccess  .rnd  .user.ini  AGENTS.md  CLAUDE.md  COMPROBANTE_GUIA.md  CRM_PREMIUM_GUIA.md  GEMINI.md  README.md  accounting_accounts.php  accounting_export.php  accounting_helpers.php  accounting_journal.php  accounting_reports_print.php  ache_plus_resumen_comercial.docx  admin_migracion.php  admin_migracion_api.php  affiliate_network.php  affiliate_network_api.php  affiliate_network_health.php  affiliate_network_help.php  affiliate_network_login.php  affiliate_network_logout.php  affiliate_network_manifest.json  affiliate_network_payment_webhook.php  affiliate_network_reconcile_batch.php  affiliate_network_smoke.php  affiliate_network_sw.js  ai_terminal_api.php  ai_tmux_daemon.php  almanaque.php  api_locations.php  api_sales.php  api_sync_server.php  backup_pre_importacion_recetas_20260302_041942.sql  branch_transfers.php  business_closure_report.php  business_metrics.php  cash_flow.php  (+232 more)
.claude/: settings.local.json
_deprecated/: fb.php  pos2.php  pos_backup.php  pos_pos_config.php  test_load.php
affiliate_network/: app.js  bootstrap.php  domain.php  help_view.php  styles.css  view.php
ai_data/: chats.json  messages_1.json  projects.json
api/: chat_api.php  pos-offline-system.js  pos.js  pos.php  posg.php  reservas_offline.php  reservas_offline_ota.php  water_sync.php
backups/: pos.js  (+6 more)
snmp_vu_tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
snmp_vu_tauri/src-tauri/capabilities/: default.json
snmp_vu_tauri/src-tauri/src/: main.rs
(+643 files in other folders)
