[package]
name = "snmp-vu-tauri"
version = "1.0.0"
description = "PalWeb SNMP VU gadget migrated to Tauri"
authors = ["PalWeb"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
snmp = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
